# aoc-2025

./: .gitignore  Cargo.toml  README.md
day1/: safe.ino
day2/: day2_part1.c  day2_part2.py
day3/: part1.py  part2.py
src/: day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
