[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.46.1"
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.5.0"
regex = "1.4.2"
sscanf = "0.4.0"
advent_of_tools = {git = "https://github.com/bofh69/advent_of_tools.git"}
memoize = "0.4.2"
ahash = "0.8.11"
rand = "0.8.5"
